# grpc-explore

./: .gitignore  README.md  environment.yaml  pyproject.toml
grpc_example/: README.md  todo.proto  todo_client.py  todo_pb2.py  todo_pb2.pyi  todo_pb2_grpc.py  todo_server.py
proto_example/: README.md  employees.proto  employees_pb2.py  employees_pb2.pyi  proto_compare.py
